# TrafficFlowChallenge

./: CMakeLists.txt  README.md  TrafficFlowManager.cpp
Controller/: CMakeLists.txt
Controller/src/: FlowController.cpp  FlowController.h  IntersectionInfo.h  Utils.cpp  Utils.h
Controller/src/ControlMethods/: BaseMethod.cpp  BaseMethod.h  ControlMethod.cpp  ControlMethod.h  Roundabout.cpp  Roundabout.h  StopSignal.cpp  StopSignal.h  TrafficLights.cpp  TrafficLights.h
Controller/tests/: CMakeLists.txt
